# far-and-farble

./: .gitignore  README.md  database.py  main.py  pyproject.toml
api/v1/: model.py  payment.py  user.py
models/: PetImage.py  User.py
schemas/: payment.py  pet_image.py  user.py
templates/: verification_email.html
utils/: auth.py  encode.py  image_processing.py  mailconfig.py  prompts.py
